# streamblocks-examples

./: .gitignore  .gitmodules  README.md  Streamblocks.cmake  common.cmake
VoxBox/: .project  AllPole.cal  Analyzer.cal  AutoCorr.cal  Demo1_Vowel.cal  Demo2a_Whisper.cal  Demo2b_Robot.cal  Demo3a_Residual.cal  Demo3b_IdentityActor.cal  Demo3c_SyntheticVoice.cal  Demo3d_TransformedVoice.cal  Demo4a_FormantWarp.cal  Demo4b_TransformedVoice.cal  ImpulseGenerator.cal  Levinson.cal  PitchDetector.cal  PredictionFilter2.cal  Segmentation.cal  Speaker.cal  SpeakerSDL.cal  VowelSource.cal  WarpedAllPole.cal  WavParser.cal  WavSink.cal  WavSource.cal  utilities.cal
VoxBox/test/: TestAutoCorr.cal  TestImpulseGenerator.cal  TestLevinson.cal  TestPitchDetector.cal  TestPreEmphasis.cal  TestPredictionFilter.cal  TestSegmentation.cal  TestSynthesisFilter.cal  TestTone.cal  TestWavSource.cal
ZigBee/: Top_ZigBee.cal  ZigBee.cal  chipMapper.cal  constants.cal  headerAdd.cal  pulseShape.cal  qpskMod.cal  sink.cal  source.cal
converters/: .project
converters/src/rasterizers/: MBToRaster.cal  RasterToMB.cal
converters/src/rgbtoyuv/: RGBtoYCbCr.cal  RGBtoYUV.cal  YCrCb422to420.cal  YCrCb444to422.cal
converters/src/size/: SoiMB.cal  SoiUpscale.cal
converters/src/yuvtorgb/: YCrCb420to422.cal  YCrCb422to444.cal  YCrCbtoRGB.cal  YUVtoRGB.cal
dpd/: Top_dpd.cal  addertree.cal  datasink.cal  datasource.cal  dpd.cal  fir5.cal  polynomial.cal
filters/fir/: .project
filters/fir/src/: Random.cal  TopFIRThroughput.cal
genomic/: .project
genomic/art/: genomic.cal
hetero/: common.mk  rules.mk
hetero/decoder/: Jpeg.cal
hetero/decoder/jpeg/: CMakeLists.txt  Jpeg.cal  Makefile
hetero/decoder/mpeg/: common.cmake  common.mk  rules.mk
hetero/filters/fir/: CMakeLists.txt
hetero/mpeg/: MPEG.xdf  compile
hetero/security/: .gitignore  CMakeLists.txt  Makefile  ParallelSHA.cal  sha-1.cal
hetero/security/scripts/: HashCollector.py  ParallelSHA.py  ParallelSHANetwork.py  StreamDispatcher.py  StringGenerator.py
hetero/simple/: CMakeLists.txt  Loopback.cal  Makefile  Pass.cal  Pipes.cal  Sink.cal  Source.cal  Synth.cal  compile
hetero/simple/bandwidth/: CMakeLists.txt  bandwidth.cpp  plotter.py
hetero/simple/bandwidth/plink/: CMakeLists.txt
hetero/simple/bandwidth/plink/include/: device-handle.h
hetero/simple/bandwidth/plink/src/: device-handle.cc
hetero/smith-waterman/: CMakeLists.txt  SWNetwork.cal
hetero/smith-waterman/cmake/: config.xml.in
hetero/sort/bitonic/: CMakeLists.txt
hetero/spamfilter/: CMakeLists.txt  sgdkernel.cal  spamfilter.cal
hetero/spamfilter/sgd/: Error.cal  dotprod.cal  epochmanager.cal  gradient.cal  paramfeeder.cal  sigmoid.cal  sigmoid.py  splitter.cal  update.cal
hetero/spamfilter/utils/: bytestofloat.cal  test.cal
hetero/stencil/: .project  CMakeLists.txt  common.cal  denoise2d.cal
hetero/stencil/cpp/: bmp.cpp  bmp.h
hetero/stencil/kernels/: Blur.cal  KernelStreamer.cal
hetero/stencil/test/: BMPTest.cal  FormatTest.cal  RgbTo420Mb.cal
hetero/stencil/utils/: common.cal
hetero/transforms/idct/: CMakeLists.txt
hetero/utils/: Comparator.cal  activityPlot.py
jpeg/: .project  Dequantizer.cal  Display.cal  HuffmanDecoder.cal  IDCT.cal  JpegDecoder.cal  Source.cal  SyntaxParser.cal  Top_JPEG_Decoder.cal
jpeg/decoder/: HuffmanDecoder.cal  IDCT.cal  SyntaxParser.cal
jpeg/io/: Display.cal  Source.cal
mdp/: .project
mdp/src/: TopFibonacci.cal
rvc-mpeg4sp/: .project  CMakeLists.txt  Clip.cal  Framebuf_w_Address.cal  GEN_mgnt_DCSplit.cal  GEN_mgnt_Merger420.cal  MPEG4_algo_Add.cal  MPEG4_algo_DCRaddressing_16x16.cal  MPEG4_algo_DCRaddressing_8x8.cal  MPEG4_algo_DCRinvpred_luma_16x16.cal  MPEG4_algo_IAP_16x16.cal  MPEG4_algo_IAP_8x8.cal  MPEG4_algo_IS.cal  MPEG4_algo_Inversequant.cal  MPEG4_mgnt_Address.cal  MVReconstruct.cal  ParseHeaders.cal  Scale.cal  Transpose.cal  byte2bit.cal  configuration.xcf  configuration_0.xcf  configuration_1.xcf  configuration_10.xcf  configuration_11.xcf  configuration_12.xcf  configuration_13.xcf  configuration_14.xcf  configuration_15.xcf  configuration_2.xcf  configuration_3.xcf  configuration_4.xcf  configuration_5.xcf  configuration_6.xcf  configuration_7.xcf  configuration_8.xcf  configuration_9.xcf  decoder.cal  decoderDemo.cal  decoderDemoTraces.cal  (+11 more)
rvc-mpeg4sp/cmake/: configuration_1.xml.in  configuration_2.xml.in  configuration_3.xml.in  configuration_4.xml.in  configuration_5.xml.in  configuration_6.xml.in  configuration_7.xml.in
rvc-mpeg4sp/decoder/: GEN_mgnt_Merger420.cal  Top_RVC_Decoder.cal  decoder.cal  decoderDemo.cal
rvc-mpeg4sp/decoder/io/: Display.cal  Source.cal
rvc-mpeg4sp/decoder/motion/: Framebuf_w_Address.cal  MPEG4_algo_Add.cal  MPEG4_algo_Interpolation_halfpel.cal  motion.cal  motion_ext_mem.cal
rvc-mpeg4sp/decoder/parser/: ParseHeaders.cal  byte2bit.cal  parser.cal  parserWithoutEntropy.cal  splitter_420_B.cal  splitter_BTYPE.cal
rvc-mpeg4sp/decoder/testbed/: IdctTestbed.cal  decoderTestbed.cal  decoderTestbedWithoutEntropy.cal  decoderWithoutEntropy.cal
rvc-mpeg4sp/decoder/texture/: GEN_mgnt_DCSplit.cal  MPEG4_algo_IAP_16x16.cal  MPEG4_algo_IAP_8x8.cal  MPEG4_algo_Inversequant.cal  texture_8x8.cal
rvc-mpeg4sp/decoder/texture/dcReconstruction/: DC_Reconstruction_16x16.cal  DC_Reconstruction_8x8.cal  MPEG4_algo_DCRaddressing_16x16.cal  MPEG4_algo_DCRinvpred_chroma_8x8.cal
rvc-mpeg4sp/decoder/texture/idct2d/: Clip.cal  Scale.cal  scaled_1d_idct.cal
rvc-mpeg4sp/old_configs/: configuration.xcf  configuration_1.xcf  configuration_2.xcf  configuration_3.xcf  configuration_4.xcf  configuration_9.xcf
simple/: .project  SourceSink.cal
simple/actor/: Adder.cal  SourceSink.cal
simple/genomic/: FastaReader.cal
simple/process/: SourceSink.cal
simple/sort/: BitonicSort.cal  Test_BitonicSort8.cal
simple/time/: TimeMeasurement.cal
smith-waterman/: README.md
sort/bitonic/: .project
streaming/: receiver.cal
system/: .project
system/art/: ART.cal  io.cal  math.cal  util.cal
transforms/dct/: .project
transforms/fft/: .project
(+975 files in other folders)
